# aos_core_api

./: CMakeLists.txt  README.md  build.sh
aosprotocol/: CMakeLists.txt
conan/: conanfile.py
proto/: CMakeLists.txt
proto/common/v2/: common.proto
proto/iamanager/v1/: iamanagercommon.proto  iamanagerprotected.proto  iamanagerpublic.proto
proto/iamanager/v5/: iamanager.proto  iamanager.templ
proto/iamanager/v6/: iamanager.proto
proto/servicemanager/v1/: servicemanager.proto
proto/servicemanager/v3/: servicemanager.proto
proto/servicemanager/v4/: servicemanager.templ
proto/servicemanager/v5/: network.proto  proxy.proto  servicemanager.proto
